// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonImageWithTextAndBadge /> default snapshot 1`] = `
<button
  aria-expanded={false}
  aria-haspopup="true"
  className="sc-bwzfXH iUQliu k-ButtonImageNextWithTextAndBadge"
  onClick={[Function]}
  title="Custom title"
>
  <span
    className="k-ButtonWithBadge"
  >
    <span
      className="k-ButtonImage"
    >
      <img
        alt="Custom alt"
        className="k-ButtonImage__img"
        height={300}
        src="http://via.placeholder.com/300x300"
        width={300}
      />
    </span>
  </span>
  <p
    className="sc-bdVaJa bDWFJH k-u-size-tiny k-u-weight-light k-ButtonImageNextWithTextAndBadge__text k-ButtonImageNextWithTextAndBadge__text--withoutPaddingRight"
  >
    Custom text
  </p>
</button>
`;

exports[`<ButtonImageWithTextAndBadge /> snapshot with notifications 1`] = `
<button
  aria-expanded={false}
  aria-haspopup="true"
  className="sc-bwzfXH iUQliu k-ButtonImageNextWithTextAndBadge"
  onClick={[Function]}
  title="Custom title"
>
  <span
    className="k-ButtonWithBadge"
  >
    <span
      className="k-ButtonImage"
    >
      <img
        alt="Custom alt"
        className="k-ButtonImage__img"
        height={300}
        src="http://via.placeholder.com/300x300"
        width={300}
      />
    </span>
    <span
      className="k-ButtonWithBadge__badge k-Badge"
      style={
        Object {
          "backgroundColor": "#FF0000",
        }
      }
    >
      !
    </span>
  </span>
  <p
    className="sc-bdVaJa bDWFJH k-u-size-tiny k-u-weight-light k-ButtonImageNextWithTextAndBadge__text k-ButtonImageNextWithTextAndBadge__text--withoutPaddingRight"
  >
    Custom text
  </p>
</button>
`;
